# Orquestra-MCP

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
docs/architecture/: executable-foundation.md  implementation-status.md  phase-2-multi-backend-orchestration.md
scripts/: powerbi_mcp_manager.py
src/mcp_orchestrator/: mcp_proxy.py
src/mcp_orchestrator/application/: __init__.py  composer.py  intake.py  orchestrator.py  policy.py  routing.py  trace.py
src/mcp_orchestrator/domain/: enums.py  models.py  ports.py
src/mcp_orchestrator/infrastructure/mcp_clients/: base.py  postgresql.py  registry.py  sql_server.py
src/mcp_orchestrator/infrastructure/mcp_servers/: catalog.py
src/powerbi_mcp_manager/: __init__.py  cli.py  manager.py
tests/: test_contracts.py  test_execution_policy.py  test_intake.py  test_mcp_proxy.py  test_mcp_server_catalog.py  test_orchestrate_api.py  test_postgresql_mcp_client.py  test_router.py  test_sql_server_mcp_client.py
